<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">GoVahan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="api_key" translatable="false">AIzaSyAQq7DPHvXZdcpLwxOYyKBBzszgkTJSMOw</string>
    <string name="make_sure_you_have_an_active_data_connection">Make sure you have an active data connection</string>
    <string name="connection_timeout">Connection Timeout</string>
    <string name="oops_somethings_went_wrong">Oops! Somethings went wrong</string>
    <string name="default_notification_channel_id" translatable="false">Transport</string>
    <string name="password">**********</string>
    <string name="from">From</string>
    <string name="gurugram">Gurugram</string>
    <string name="to">To</string>
    <string name="noida">Noida</string>
    <string name="selectdate">Select Date</string>
    <string name="selecttime">Select Time Slot</string>
    <string name="datehint">12-July-2022</string>
    <string name="timehint">12:00 PM</string>
    <string name="blank">"blank "</string>
    <string name="myprofile">My Profile</string>
    <string name="bookinghistory">Booking History</string>
    <string name="favouritelocations">Favourite Locations</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="invoices">Invoices</string>
    <string name="paymentoptions">Payment Options</string>
    <string name="transactions">Transaction History</string>
    <string name="myoffers">My Offers</string>
    <string name="complaintbox">Complaint Box</string>
    <string name="aboutus">About us</string>
    <string name="cancellation">
Cancellation &amp; Refund Policy</string>
    <string name="rateapp">Rate Application</string>
    <string name="privacypolicy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="first_name">First Name</string>
    <string name="mobileno">Mobile No.</string>
    <string name="mobnumber">880222****</string>
    <string name="email_address">E-mail Address</string>
    <string name="examplegmail">Example@gmail.com</string>
    <string name="gst_no">GST No.</string>
    <string name="gstnum">22AAAAA0000A125</string>
    <string name="vehicle_number">Vehicle Number</string>
    <string name="vehicle_registration_no">Vehicle Registration No.</string>
    <string name="reg_no">UP 3D 1234</string>
    <string name="type_of_vehicles">Type of vehicles</string>
    <string name="total_driver">Total Driver</string>
    <string name="driver_name">Driver Name : </string>
    <string name="driver_name_choose">Driver Name: </string>
    <string name="driver_license_number">Driver License Number</string>
    <string name="addmore">ADD MORE</string>
    <string name="submit">Submit</string>
    <string name="userid">User Id</string>
    <string name="headpassword">Password</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="or">Or</string>
    <string name="head_accountverification">Account Verification</string>
    <string name="dummy_text">Dummy Text</string>
    <string name="entermobileno">Enter Mobile Number</string>
    <string name="referralcode">Referral Code (optional)</string>
    <string name="next">Next</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="otp">OTP</string>
    <string name="createpassword">Create Password</string>
    <string name="r_password">Password</string>
    <string name="r_confirm_password">Confirm Password</string>
    <string name="done">Done</string>
    <string name="passengervehicle">Passenger Vehicle</string>
    <string name="loadervehicle">Loader Vehicle</string>
    <string name="selectservicetype">Select service type</string>
    <string name="createbusinesscard">Create Business Card</string>
    <string name="addtrip">Add Trip</string>
    <string name="viewtrip">View Trip</string>
    <string name="tripbook">Trip Book</string>
    <string name="truckdocument">Truck Document</string>
    <string name="adddriver">Add Driver</string>
    <string name="companyname">Company Name</string>
    <string name="fullname">Full Name</string>
    <string name="phoneno">Phone No.</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="bsltransport">BSL Transport</string>
    <string name="pramod">Pramod Gupta</string>
    <string name="hintphn">+91 123456789</string>
    <string name="hintaddress">Type your address here</string>
    <string name="downloadpdf">Download as a PDF</string>
    <string name="drivername">Driver Name</string>
    <string name="drivingexperience">Driving Experience</string>
    <string name="licensenumber">HR-7777******</string>
    <string name="username">User Name</string>
    <string name="usernamehint">user@3456</string>
    <string name="driving_license_number">Driving License Number</string>
    <string name="years5">5 years</string>
    <string name="phonenumber">Phone Number</string>
    <string name="addthisdriver">ADD THIS DRIVER</string>
    <string name="transactionreport">Transaction Report</string>
    <string name="notification">Notification</string>
    <string name="rateapplication">Rate Application</string>
    <string name="referandearn">Refer &amp; Earn</string>
    <string name="term_and_condition">Term And Condition</string>
    <string name="driverlist">Driver List</string>
    <string name="ramesh">Ramesh Solanki</string>
    <string name="licno">Lic. No. HR-0619850034761</string>
    <string name="triptask">Trip Task</string>
    <string name="officeshifting">Office Shifting</string>
    <string name="enterloadcarrying">Enter Load Carrying</string>
    <string name="ton5">5 Ton</string>
    <string name="vehicletype">Vehicle Type</string>
    <string name="tatarigidtruck">Tata Rigid Truck</string>
    <string name="vehiclenumber">Vehicle Number</string>
    <string name="up5c4589">UP 5C 4589</string>
    <string name="assigndriver">Assign Driver</string>
    <string name="totalkilometers">Total Kilometers</string>
    <string name="hintkilom">350</string>
    <string name="price">Price</string>
    <string name="pricehint">Rs. 5,000</string>
    <string name="addthistrip">Add This Trip</string>
    <string name="addtruckdoc">Add Truck Documents</string>
    <string name="specification">Specification</string>
    <string name="truckname">Truck Name</string>
    <string name="hinttataintra">Tata Intra v30</string>
    <string name="yearofmodel">Year of Model</string>
    <string name="hint2015">2015</string>
    <string name="trucknumber">Truck Number</string>
    <string name="capacity">Capacity : </string>
    <string name="seatingcapacity">Seating Capacity</string>
    <string name="color">Color</string>
    <string name="silvergray">Silver Gray</string>
    <string name="uploadtruckphoto">Upload Your Truck Photo</string>
    <string name="uploaddoc">Upload Documents</string>
    <string name="rcbook">Rc Book</string>
    <string name="rcbookpdf">Rc-book.jpg</string>
    <string name="insurancedoc">Insurance Document</string>
    <string name="insurancedocpdf">Insurance-Document.pdf</string>
    <string name="pollutiondoc">Pollution Document</string>
    <string name="pollutiondocpdf">Pollution-Document.pdf</string>
    <string name="approvalwait">Wait for approval!</string>
    <string name="approvalwaittext">Please wait for approval from admin.</string>
    <string name="upcomingbookings">Upcoming Bookings</string>
    <string name="hint_truckname">Tata 407</string>
    <string name="hint_ton">2.5 Ton</string>
    <string name="hint_date">30 May 2022</string>
    <string name="hint_start">Sec. 15 Noida</string>
    <string name="hint_stop">Gurugram sector 30</string>
    <string name="hint_distance">41.5 Km</string>
    <string name="hint_bookingid">"Booking id: "</string>
    <string name="loremdummytext">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="passenger_vehicle">Passenger Vehicle</string>
    <string name="role">Role</string>
    <string name="addPassengerVehicle">Add Passenger Vehicle</string>
    <string name="vehiclenname">Vehicle Name</string>
    <string name="rcphoto">RC Photo</string>
    <string name="fitnesspapers">Vehicle Fitness Papers</string>
    <string name="rto_doc">RTO Document</string>
    <string name="drivers">Driver</string>
    <string name="freightamount">Freight Amount</string>
    <string name="rameshemail">ramesh@2345</string>
    <string name="contactus">Contact us</string>
    <string name="check_network_connection">Please check your Internet connection</string>
    <string-array name="PaymentMode">
        <item>Select payment Mode</item>
        <item>Cash</item>
        <item>Online</item>
    </string-array>
    <string name="title_activity_settings">Settings Activity</string>
    <string name="messages_header">Message</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="enter_trip_task">Enter Trip task</string>
    <string name="search_here">Search Here</string>
    <string name="no_of_tyres">Number of Tyres</string>
    <string name="search_and_proceed">Search &amp; Proceed"</string>
    <string name="heading">Heading</string>
    <string name="type_your_concern">Type your concern</string>
    <string name="select_your_reasons_for_ride_cancellation">Select Your Reasons for Ride Cancellation</string>
    <string name="write_your_reason_for_ride_cancellation">Write Your Reason for Ride Cancellation</string>
    <string name="enter_otp">Enter Otp</string>
    <string name="digit_6_OTP_has_been_sent_to_your_mobile_number">6 digit OTP has been sent to your mobile number</string>
    <string name="resend_otp">Resend Otp</string>
    <string name="cancel">Cancel</string>
    <string name="LogOut_q">Log Out?</string>
    <string name="are_you_sure_want_to_log_out">Are you sure want to log out?</string>
    <string name="please_complete_your_profile">Please Complete Your Profile</string>
    <string name="before_book_the_trip_You_Need_to_Complete_Your_Profile">Before book the trip,\nYou Need to Complete Your Profile</string>
    <string name="go_To_The_Profile_And_Fill_The_Required_Details">Go To The Profile And Fill The\nRequired Details</string>
    <string name="ok">OK</string>
    <string name="confirm_cancellation">Confirm Cancellation</string>
    <string name="terms_and_Conditions_apply">Terms and Conditions apply.</string>
</resources>