<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
       >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:background="@drawable/round_bacground"
            android:orientation="vertical">


            <ImageView
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:src="@drawable/ic_error"
                android:textColor="@color/black"
                android:textSize="@dimen/_25sdp"

                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/please_complete_your_profile"
                android:textColor="@color/theme_yellow"
                android:textSize="@dimen/_15sdp"
               android:fontFamily="@font/roboto_bold"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/before_book_the_trip_You_Need_to_Complete_Your_Profile"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="@dimen/_13sdp"
                android:fontFamily="@font/roboto_medium"
                 />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/go_To_The_Profile_And_Fill_The_Required_Details"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/gray"
                android:textSize="@dimen/_14sdp"
                />





                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_24sdp"
                    android:layout_marginBottom="@dimen/_24sdp"
                    android:gravity="center"
                    android:layout_marginStart="@dimen/_24sdp"
                    android:layout_marginEnd="@dimen/_24sdp"
                    android:orientation="horizontal">


                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnOk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@color/orange"
                        android:gravity="center"
                        android:text="@string/ok"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14sdp" />
                </LinearLayout>



        </LinearLayout>

    </LinearLayout>
</layout>