<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
       >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:padding="@dimen/_5sdp"
            android:background="@drawable/round_bacground"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/enter_otp"
                android:textColor="@color/black"
                android:textSize="@dimen/_25sdp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="@string/digit_6_OTP_has_been_sent_to_your_mobile_number"
                />

            <LinearLayout
                android:layout_margin="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
               android:gravity="center"
                android:orientation="vertical">



                <com.chaos.view.PinView
                    android:id="@+id/otp_view"
                    style="@style/PinWidget.PinView"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:cursorVisible="true"
                    android:inputType="number"
                    app:cursorColor="@color/white"
                    app:hideLineWhenFilled="false"
                    app:itemCount="6"
                    android:textColor="@color/black"
                    app:itemHeight="@dimen/_35sdp"
                    app:itemRadius="5dp"
                    app:itemWidth="@dimen/_30sdp"
                    app:itemSpacing="10dp"
                    app:lineColor="@color/orange"
                    app:lineWidth="2dp" />


                <TextView
                    android:id="@+id/tvResend"
                   android:textSize="@dimen/_12sdp"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto_medium"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/resend_otp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_24sdp"
                    android:layout_marginBottom="@dimen/_24sdp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnCancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:background="@drawable/edt_round_corner_yellow"
                        android:backgroundTint="@color/black"
                        android:gravity="center"
                        android:text="@string/cancel"
                        android:fontFamily="@font/roboto_medium"

                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_16sdp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnSubmit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_16sdp"
                        android:layout_weight="1"
                        android:background="@drawable/edt_round_corner_yellow"
                        android:gravity="center"
                        android:text="@string/next"
                        android:fontFamily="@font/roboto_medium"

                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_16sdp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</layout>