<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:behavior_hideable="false"
        style="@style/CustomBottomSheet"
        app:behavior_peekHeight="90dp"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottomsheet_full"


        android:orientation="vertical">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:background="@color/transparent"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_close"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:src="@drawable/icon_cross"
                android:layout_gravity="end"
                android:padding="@dimen/_5sdp"
                android:gravity="end|center" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/select_your_reasons_for_ride_cancellation"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_gravity="start"
                    android:textColor="@color/black"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:textSize="@dimen/_13sdp"
                    android:layout_weight="1"/>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_reasons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    tools:listitem="@layout/row_cancellation_reason"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="start"
                    android:text="@string/or"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/_15sdp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/write_your_reason_for_ride_cancellation"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp" />




                <EditText
                    android:id="@+id/et_feedback"
                    android:hint="@string/type_your_concern"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@drawable/edt_round_corner"
                    android:backgroundTint="@color/lightgray"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="start"
                    android:padding="@dimen/_5sdp"
                    android:imeOptions="actionNext"
                    android:textSize="@dimen/_12sdp"
                    app:hintAnimationEnabled="false"
                    android:textColorHint="@color/gray"
                    android:textColor="@color/black"
                    app:hintEnabled="false" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"


                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/terms_and_Conditions_apply"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/_9sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"

                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_medium"
                    android:text="*"
                    android:textColor="#EA0215"
                    android:textSize="@dimen/_11sdp" />


            </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnConfirmCancel"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_35sdp"
                        android:background="@drawable/edt_round_corner_yellow"
                        android:layout_gravity="center"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="center"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:paddingLeft="@dimen/_20sdp"
                        android:paddingRight="@dimen/_20sdp"
                        app:cardCornerRadius="12dp"
                        android:textColor="@color/black"
                        android:textAllCaps="false"
                        android:textSize="@dimen/_14sdp"
                        android:text="@string/confirm_cancellation"/>


                </LinearLayout>

                    </LinearLayout>

        </ScrollView>

            </LinearLayout>

    </LinearLayout>
</layout>